<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_margin="15dp"
        app:columnCount="3"
        app:rowCount="6"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcome"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnSpan="3"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnSpan="2"
            />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#455A64"
            android:textOff="@string/cold"
            android:textOn="@string/hot"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_row="1"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_columnSpan="3"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Milk"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_columnWeight="1"
            />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Sugar"
            app:layout_column="1"
            app:layout_row="3"
            app:layout_columnWeight="1"
            />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Lemon"
            app:layout_column="2"
            app:layout_row="3"
            app:layout_columnWeight="1"
            />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>